--- a/style.css
+++ b/style.css
@@ -15,12 +15,13 @@ body{
     background-image: url(/img/side-image.jpg);
     background-repeat: no-repeat;
     background-size: auto 100%;
+    color:white;
     overflow: hidden;
+    position:relative;
 }
 
 .logo-container{
     height:8rem;
-    color:white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,6 +39,14 @@ img{
     display:inline;
     font-family:norse-bold;
     font-size:120px;
+}
+
+.image-author{
+    position:absolute;
+    bottom:1rem;
+    right:0;
+    left:0;
+    text-align:center;
 }
 
 @font-face{
