--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
-body{
-    margin:0;
-    padding:0;
-}
-
 :root{
     --second-bg:#dbdbdb;
     --input-border:#E5E7EB;
     --submit:#596D48;
 }
 
-.side-hero{
-    width:30vw;
+body{
+    margin:0;
+    padding:0;
+    display:flex;
     height:100vh;
+}
+
+p{
+    margin:0;
+}
+
+.side-hero{
+    flex:1;
     background-image: url(/img/side-image.jpg);
     background-repeat: no-repeat;
     background-size: auto 100%;
@@ -48,6 +53,19 @@ img{
     left:0;
     text-align:center;
 }
+
+.content{
+    flex:2;
+}
+
+.about-service{
+    background-color: var(--second-bg);
+}
+
+p{
+    color:black;
+}
+
 
 @font-face{
     font-family:norse-bold;
