--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ img{
 
 .content{
     flex:2;
+    display: flex;
+    flex-direction: column;
+}
+
+.content > *{
+    flex:1;
 }
 
 .about-service{
@@ -64,6 +70,9 @@ img{
 
 p{
     color:black;
+    font-size:1.5rem;
+    font-weight:900;
+    margin-bottom:20px;
 }
 
 
