--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     padding:0;
     display:flex;
     height:100vh;
+    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 p{
@@ -73,6 +74,8 @@ p{
     font-size:1.5rem;
     font-weight:900;
     margin-bottom:20px;
+
+
 }
 
 
