--- a/style.css
+++ b/style.css
@@ -62,17 +62,19 @@ img{
 }
 
 .content > *{
-    flex:1;
+    flex:1 1 33%;
 }
 
 .about-service{
+    box-sizing: border-box;
     background-color: var(--second-bg);
+    padding: 150px 30% 50px 5%;
 }
 
 p{
     color:black;
-    font-size:1.5rem;
-    font-weight:900;
+    font-size:1.7rem;
+    font-weight:500;
     margin-bottom:20px;
 
 
