--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --second-bg:#dbdbdb;
     --input-border:#E5E7EB;
     --submit:#596D48;
+    --padding-left-in-main:5%;
 }
 
 body{
@@ -68,7 +69,7 @@ img{
 .about-service{
     box-sizing: border-box;
     background-color: var(--second-bg);
-    padding: 150px 30% 50px 5%;
+    padding: 150px 30% 50px var(--padding-left-in-main);
 }
 
 p{
@@ -80,6 +81,7 @@ p{
 
 .registration-form{
     box-shadow: 0 7px 7px rgb(197, 197, 197);
+    padding-left:var(--padding-left-in-main);
 }
 
 @font-face{
