Style text inputs more fix labels
buttons react on focus, invalid, labels focus on input when clicked

--- a/style.css
+++ b/style.css
@@ -96,7 +96,25 @@ p{
 }
 
 input{
-    width: 75%;
+    width: 80%;
+    height: 3rem;
+    padding: 0 0.5rem;
+    margin: 0;
+    border:#E5E7EB 1px solid;
+    border-radius: 0.2rem;
+    font-family: inherit;
+    font-weight: 300;
+    font-size: 1.2rem;
+    box-sizing: border-box;
+}
+
+input:user-invalid{
+    border-color:red;
+}
+
+input:focus{
+    outline:none;
+    border-color: blue;
 }
 
 label{
