--- a/style.css
+++ b/style.css
@@ -95,7 +95,10 @@ p{
     flex: 1 0 50%;
 }
 
-input{
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="password"]{
     width: 80%;
     height: 2.8rem;
     padding: 0 0.5rem;
@@ -108,11 +111,16 @@ input{
     box-sizing: border-box;
 }
 
-input:user-invalid{
+input[type="text"]:user-invalid,
+input[type="email"]:user-invalid,
+input[type="tel"]:user-invalid{
     border-color:red;
 }
 
-input:focus{
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+input[type="password"]:focus{
     outline:none;
     border-color: blue;
     box-shadow: 5px 5px 5px var(--input-border);
