--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p{
     flex:1;
     background-image: url(./img/side-image.jpg);
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: 100% 100%;
     color:white;
     overflow: hidden;
     position:relative;
